--- a/BLOG/blog.css
+++ b/BLOG/blog.css
@@ -33,10 +33,11 @@ display:inline-block;
 h3
 {
 	font-family: Arial;
+	text-align: center;
 }
 #thoughts-on-God
 {
-	text-align: center;
+	
 	background-color: black;
 	font-size:30px;
 	color:white;
@@ -78,10 +79,10 @@ height:70px;
 	border-style: solid;
 	border-radius: 10px;
 	border-color:black;
-	text-align: center;
 	max-width:500px;
 	margin: auto;
 	box-sizing:border-box;
+	margin-bottom: 30px;
 }
 #femcels:hover
 {
@@ -95,10 +96,4 @@ a
 	text-decoration: none;
 }
 
-@media screen only and (max-width:412px)
-{
-	#femcels
-	{
 
-	}
-}
