--- a/STORE/store.css
+++ b/STORE/store.css
@@ -69,5 +69,36 @@ display:inline-block;
 	background-color: black;
 	max-width:210px;
 	margin: auto;
-	margin-bottom:30px;
+
+}
+#my-fiverr
+{
+	text-align: center;
+	position: relative;
+	top:70px;
+	font-family: "Open Sans",Arial;
+	color:rgb(0, 255, 106);
+	font-size:30px;
+	font-weight: bold;
+	background-color: black;
+	max-width:170px;
+	margin: auto;
+}
+#my-fiverr:hover
+{
+	text-decoration: underline;
+	cursor:pointer;
+}
+
+@media only screen and (max-width:412px)
+{
+	#discord-image
+	{
+		max-width:360px;
+	}
+	#discord-text
+	{
+		font-size:20px;
+		max-width: 330px;
+	}
 }
