--- a/PROJECTS/projects.css
+++ b/PROJECTS/projects.css
@@ -69,10 +69,21 @@ p
 	margin:auto;
 }
 
-@media only screen and (max-width:915px)
+@media only screen and (max-width:412px)
 {
-	video
+	#clown
 	{
-		width:300px;
+		width: 150px;
+	}
+	#sideshow-header
+	{
+		font-size:35px;
+		letter-spacing: 0px;
+		max-width: 200px;
+	}
+	#future-project
+	{
+		font-size:20px;
+		max-width: 230px;
 	}
 }
