--- a/BLOG/blog.css
+++ b/BLOG/blog.css
@@ -27,14 +27,22 @@ display:inline-block;
 }
 #home:hover
 {
+	opacity: 0.8;
 	text-decoration: underline;
 }
 #projects:hover
 {
+	opacity: 0.8;
 	text-decoration: underline;
 }
 #store:hover
 {
+	opacity: 0.8;
+	text-decoration: underline;
+}
+#info:hover
+{
+	opacity: 0.8;
 	text-decoration: underline;
 }
 
@@ -116,6 +124,7 @@ height:70px;
 	cursor:pointer;
 	opacity: 0.5;
 }
+
 
 
 
