--- a/PROJECTS/projects.css
+++ b/PROJECTS/projects.css
@@ -69,28 +69,33 @@ p
 }
 #future-project
 {
-	font-size:25px;
+	font-size:20px;
 	color:white;
 	background-color: black;
-	max-width:560px;
+	max-width:500px;
 	margin:auto;
 }
 
 @media only screen and (max-width:412px)
 {
+	li,ul,a
+	{
+		font-size: 22px;
+	}
 	#clown
 	{
-		width: 150px;
+		width: 90px;
+		height:90px;
 	}
 	#sideshow-header
 	{
-		font-size:35px;
+		font-size:25px;
 		letter-spacing: 0px;
-		max-width: 200px;
+		max-width: 130px;
 	}
 	#future-project
 	{
-		font-size:20px;
+		font-size:15px;
 		max-width: 230px;
 	}
 }
